[package]
name = "smap"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3

[dependencies]
# ini
configparser = "3.0.2"

# cli
clap = { version = "4.4.6", features = ["derive"] }

# log
log = "0.4.20"
log4rs = "1.2.0"

# time
chrono = "0.4.35"

#hash
ahash = "0.8.3"

# input output
csv = "1.3.0"

# static
once_cell = { version = "1.18.0", features = [] }

# dns
trust-dns-resolver = "0.23.1"

# network interface
default-net = "0.18.0"
rand = "0.8.5"
aes = { version = "0.8.3", features = [] }

# big number
num-bigint = "0.4.4"
num-traits = "0.2.17"

# receiver
pcap = "2.0.0"

# bitmap
bitvec = "1.0.1"

libc = "0.2.150"

serde = "1.0.192"
serde_derive = "1.0.192"
regex = "1.10.2"
