[package]
name = "smap"
version = "1.0.1"
edition = "2021"


[profile.release]
opt-level = 3

[dependencies]
# ini
configparser = "3.0.4"

# cli
clap = { version = "4.5.4", features = ["derive"] }

# log
log = "0.4.21"
log4rs = "1.3.0"

# time
chrono = "0.4.38"

#hash
ahash = "0.8.11"

# input output
csv = "1.3.0"

# static
once_cell = { version = "1.19.0", features = [] }

# dns
trust-dns-resolver = "0.23.2"

# network interface
default-net = "0.18.0"
rand = "0.8.5"
aes = { version = "0.8.4", features = [] }

# big number
num-bigint = "0.4.5"
num-traits = "0.2.19"

# receiver
pcap = "2.0.0"

# bitmap
bitvec = "1.0.1"

libc = "0.2.154"

serde = "1.0.201"
serde_derive = "1.0.201"
regex = "1.10.4"

rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
