[package]
name = "smap"
version = "1.0.1"
edition = "2021"


[profile.release]
opt-level = 3

[dependencies]
# ini
configparser = "3.1.0"

# cli
clap = { version = "4.5.34", features = ["derive"] }

# log
log = "0.4.27"
log4rs = "1.3.0"

# time
chrono = "0.4.40"

#hash
ahash = "0.8.11"

# input output
csv = "1.3.1"

# static
once_cell = { version = "1.21.3", features = [] }

rayon = "1.10.0"
# dns
hickory-resolver = "0.25.1"

# network interface
netdev = "0.33.0"
rand = "0.9.0"
rand_distr = "0.5.1"
aes = { version = "0.8.4", features = [] }

# big number
num-bigint = "0.4.6"
num-traits = "0.2.19"

# receiver
pcap = "2.2.0"

# bitmap
bitvec = "1.0.1"

libc = "0.2.171"

regex = "1.11.1"

rust_decimal = "1.37.1"

ordered-float = "5.0.0"

uint = "0.10.0"
tokio = "1.44.1"

